cmake_minimum_required(VERSION 2.8.3)
project(cabot_wireless_simulator)

## Find catkin macros and libraries
## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
## is used, also find other catkin packages
find_package(catkin REQUIRED)

catkin_package(
)

###########
## Build ##
###########

include_directories(
)

#############
## Install ##
#############

#############
## Testing ##
#############
